o Now supports dynamic property lookup (f.e. using n['property'])
o Usage of bare node patterns is now deprecated
o Range queries can now be solved using index seeks
o Prefer size() over length() for collections and pattern predicates
o Accept lower case 'e' in cypher exponent double literals
o Added support for join hints: USING JOIN ON n

2.3-M02
-------

Cypher:
o Removed support for Cypher version 2.0 and 2.1, as announced
o Produces error or warning if a query cannot be solved using the specified planner
o Switched to using a new planner based on Iterative Dynamic Programming (IDP)
o Switched to using Scala 2.11
o Cypher now supports two new operators for string pattern matching: LIKE and ILIKE
o It is now possible to escape '_' and '%' in string literals using backslash (for use with LIKE)
o Specifying a default Cypher planner in the settings now only applies to the default language version / parser

2.3-M01
-------

Cypher:
o Added new warning mechanism. The first supported warning is generated for queries that contain a potentially
  unintended cartesian product
o Cypher may now use full index scans to solve queries containing has(n.prop) if appropriate

2.2.5
-----
o Fixes #4907 - Result.columnAs should throw exception on invalid column name
o Fixes #4988 - predicate exceptions should be ignored for non-matching rows
o Fixes #5114 - lower case exponent e unsupported

2.2.4
-----
o DbHits for property lookups reduced to one per lookup
o Identifiers are properly exposed in nested foreach clauses
o Better eviction policy for the plan cache
o Fixes #4673 - index seeks experience nulls from IN

2.2.3
-----
o Returns nice error message when using aggregation inside
  of expressions that loop over collections
o Fixes #4758 - OPTIONAL MATCH when either side is null
o Fixes problem with projection of named paths
o Identifiers in scope of ORDER BY are no longer lost in rewriting

2.2.2
-----
o Fixes problem when using named paths and aggregation