@@ -31,14 +31,14 @@ class DeleteAndPropertySetBuilderTest extends BuilderTest {
 
   test("does_not_offer_to_solve_done_queries") {
     val q = PartiallySolvedQuery().
-      copy(updates = Seq(Solved(DeleteEntityAction(Identifier("x")))))
+      copy(updates = Seq(Solved(DeleteEntityAction(Identifier("x"), forced = false))))
 
     withClue("Should not be able to build on this")(builder.canWorkWith(plan(q), planContext)) should equal(false)
   }
 
   test("offers_to_solve_queries") {
     val q = PartiallySolvedQuery().
-      copy(updates = Seq(Unsolved(DeleteEntityAction(Identifier("x")))))
+      copy(updates = Seq(Unsolved(DeleteEntityAction(Identifier("x"), forced = false))))
 
     val pipe = createPipe(nodes = Seq("x"))
 
@@ -54,7 +54,7 @@ class DeleteAndPropertySetBuilderTest extends BuilderTest {
 
   test("does_not_offer_to_delete_something_not_yet_there") {
     val q = PartiallySolvedQuery().
-      copy(updates = Seq(Unsolved(DeleteEntityAction(Identifier("x")))))
+      copy(updates = Seq(Unsolved(DeleteEntityAction(Identifier("x"), forced = false))))
 
     val executionPlan = plan(q)
     withClue("Should not accept this")(builder.canWorkWith(executionPlan, planContext)) should equal(false)
