@@ -2,9 +2,11 @@
 = Delete
 
 [abstract]
-The `DELETE` clause is used to delete graph elements -- nodes and relationships.
+The `DELETE` clause is used to delete graph elements -- nodes, relationships or paths.
 
 For removing properties and labels, see <<query-remove>>.
+Remember that you can not delete a node without also deleting relationships that start or end on said node.
+Either explicitly delete the relationships, or use `DETACH DELETE`.
 
 The examples start out with the following database:
 
@@ -12,6 +14,8 @@ include::includes/cypher-delete-graph.asciidoc[]
 
 include::delete-single-node.asciidoc[]
 
-include::delete-a-node-and-connected-relationships.asciidoc[]
-
 include::delete-all-nodes-and-relationships.asciidoc[]
+
+include::delete-a-node-with-all-its-relationships.asciidoc[]
+
+include::delete-a-path.asciidoc[]
